--- a/week6/package.json
+++ b/week6/package.json
@@ -12,5 +12,9 @@
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "g": "^2.0.1",
+    "react-router-dom": "^6.9.0"
   }
 }
